<resources>
    <string name="app_name">FragmentTest</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pindah_fragment">pindah Fragment</string>
    <string name="pindah_dengan_data">Pindah dengan data</string>
    <string name="ini_fragment">Ini Fragment</string>
    <string name="coach_kuestion">Siapa pelatih Mu Musim 2023 - 2024</string>
    <string name="sir_alex_ferguson">sir_alex_ferguson</string>
    <string name="daviMoyes">david_moyes</string>
    <string name="jose_mourinho">jose_mourinho</string>
    <string name="ering_teng_hang">Ering Teng Hang</string>
    <string name="tutup">tutup</string>
    <string name="pilih">Pilih</string>
    <string name="tampilkan_jendela_dialog">Tampilkan Jendela Dialog</string>
</resources>